# CUDAOpticalFlow

./: .gitignore  CMakeLists.txt  README.md
CUDAOpticalFlow/: OpticalFlow.sln
CUDAOpticalFlow/OpticalFlow/: OpticalFlow.vcxproj  kernel.cu
CUDAOpticalFlow/OpticalFlow/x64/Debug/: OpticalFlow.exe.recipe  OpticalFlow.ilk  kernel.cu-1867273595.deps  kernel.cu.cache
CUDAOpticalFlow/OpticalFlow/x64/Debug/OpticalFlow.tlog/: CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  OpticalFlow.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
CUDAOpticalFlow/x64/Debug/: OpticalFlow.exp
cmake/: FindNVTX.cmake
src/: optical_flow_cpu.cpp  optical_flow_cpu.cu  optical_flow_gpu_naive.cu  optical_flow_gpu_naive_aos.cu  optical_flow_gpu_naive_async.cu  optical_flow_gpu_naive_loop_unroll.cu  optical_flow_gpu_smem.cu  optical_flow_gpu_smem_aos.cu  optical_flow_gpu_smem_async.cu  optical_flow_gpu_v1.cu  optical_flow_gpu_v2.cu  optical_flow_gpu_v2_aos.cu  optical_flow_gpu_v3.cu  optical_flow_gpu_v3_async.cu  optical_flow_gpu_vanilla.cu  optical_flow_gpu_vanilla_async.cu  optical_flow_master.cu  test.cpp
x64/Debug/: OpticalFlow.exp  OpticalFlow.lib
